Fix error on IE9

--- a/css/colors.css
+++ b/css/colors.css
@@ -152,7 +152,7 @@
 }
 .big-menu {
 	color: white;
-	background: #158898 url(../img/old-browsers/colors/bg_big-menu.png) repeat-x;
+	/*background: #158898 url(../img/old-browsers/colors/bg_big-menu.png) repeat-x;*/
 	-webkit-background-size: 100% 100%;
 	-moz-background-size: 100% 100%;
 	-o-background-size: 100% 100%;
